fixed responsive grid column alignment

--- a/didi.css
+++ b/didi.css
@@ -451,6 +451,8 @@
 .w-9-11 {width:81.81818%}
 
 /* responsive grid */
+.col{display:inline-block}
+
 .col.s1{width:8.33333%}
 .col.s2{width:16.66666%}
 .col.s3{width:24.99999%}
@@ -469,13 +471,13 @@
 @media only screen and (min-width:601px){
 .col.m1{width:8.33333%}
 .col.m2{width:16.66666%}
-.col.m3,.quarter{width:24.99999%}
-.col.m4,.third{width:33.33333%}
+.col.m3{width:24.99999%}
+.col.m4{width:33.33333%}
 .col.m5{width:41.66666%}
-.col.m6,.half{width:49.99999%}
+.col.m6{width:49.99999%}
 .col.m7{width:58.33333%}
-.col.m8,.twothird{width:66.66666%}
-.col.m9,.threequarter{width:74.99999%}
+.col.m8{width:66.66666%}
+.col.m9{width:74.99999%}
 .col.m10{width:83.33333%}
 .col.m11{width:91.66666%}
 .col.m12{width:99.99999%}
@@ -484,13 +486,13 @@
 @media only screen and (min-width:993px){
 .col.l1{width:8.33333%}
 .col.l2{width:16.66666%}
-.col.l3,.quarter{width:24.99999%}
-.col.l4,.third{width:33.33333%}
+.col.l3{width:24.99999%}
+.col.l4{width:33.33333%}
 .col.l5{width:41.66666%}
-.col.l6,.half{width:49.99999%}
+.col.l6{width:49.99999%}
 .col.l7{width:58.33333%}
-.col.l8,.twothird{width:66.66666%}
-.col.l9,.threequarter{width:74.99999%}
+.col.l8{width:66.66666%}
+.col.l9{width:74.99999%}
 .col.l10{width:83.33333%}
 .col.l11{width:91.66666%}
 .col.l12{width:99.99999%}
